scripts/nullness/original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8.txt
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Position.java:28: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Position
    @Initialized @NonNull boolean equals(@Initialized @NonNull Position this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/Board.java:51: error: [argument] incompatible argument for parameter arg1 of Map.put.
        objects.put(position, null);
                              ^
  found   : null (NullType)
  required: @Initialized @NonNull BoardObject
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:61: error: [argument] incompatible argument for parameter arg1 of Map.put.
        previousPosition.put(from, null);
                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull Position
../original/urlb2eb4229f3_pTalanov_SoftwareDesignCourse2013_tgz-pJ8-ru_spbau_talanov_sd_drunkard_SimulationJ8/src/ru/spbau/talanov/sd/drunkard/FindPath.java:64: error: [argument] incompatible argument for parameter position of BoardTopology.getAdjacentPositions.
            for (Position adjacentPosition : boardTopology.getAdjacentPositions(current)) {
                                                                                ^
  found   : @Initialized @Nullable Position
  required: @Initialized @NonNull Position
4 errors
